--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http:
-  crypto:
+  http: ^0.13.3
+  crypto: ^3.0.1
+  flutter_bloc: ^7.0.0
+  equatable: ^2.0.3
+  formz: ^0.4.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
