--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^7.0.0
   equatable: ^2.0.3
   formz: ^0.4.0-nullsafety.0
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
