--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.3
   formz: ^0.4.0-nullsafety.0
   flutter_svg: ^1.0.3
+  webview_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
