--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,11 @@ dependencies:
   flutter_bloc: ^7.0.0
   equatable: ^2.0.3
   formz: ^0.4.0-nullsafety.0
+  flutter_svg: ^1.0.3
+  webview_flutter: ^3.0.0
   dartz:
   # Service locator
-  get_it: ^2.0.1
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
