--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.1.0
-  build_runner: ^2.1.7
+  mocktail: ^0.2.0
 
 flutter:
   assets:
