--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,10 @@ dependencies:
   flutter_svg: ^1.0.3
   webview_flutter: ^3.0.0
   dartz:
-  # Service locator
   get_it: ^7.2.0
   api_manager:
     git:
       url: https://github.com/m0h2medtalaat/api_manager
-      ref: nila
 
 
 
@@ -32,6 +30,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^0.2.0
+  dio: ^4.0.4
 
 flutter:
   assets:
